<resources>
	<string name="about_translators">translator-credits</string>
	<string name="about_comments">Store your private data with OI Safe.</string>
    <string name="app_name">OI Safe</string>
    <string name="empty_safe">No Passwords present for this category.</string>
    <string name="empty_category">No categories present.  Please add one via Menu->Add</string>
    <string name="password_lock">Lock</string>
    <string name="password_view">View</string>
    <string name="password_edit">Edit</string>
    <string name="password_add">Add</string>
    <string name="password_delete">Delete</string>
    <string name="password">Password</string>
    <string name="passwords">Passwords</string>
    <string name="master_password">Master Password</string>
    <string name="username">Username</string>
    <string name="website">Website</string>
    <string name="description">Description</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="invalid_password">Invalid password.  Please try again.</string>
    <string name="notify_blank_pass">Password must be at least 4 characters</string>
    <string name="notify_blank_desc">Description cannot be blank</string>
    <string name="notify_blank_name">Name cannot be blank</string>
    <string name="first_time">Please enter a password below, which will be used to keep your passwords safe.</string>
    <string name="logoff_explanation">You are currently logged into OI Safe, meaning that other applications can request their passwords and decrypt/encrypt data. Lock to prevent further access until you type in your password again.</string>
    <string name="remote_ask">Another application is asking to use the master key. Please type in your password to unlock it.</string>
    <string name="categories">Categories</string>
	<string name="category">Category</string>
    <string name="category_business">Business</string>
    <string name="category_personal">Personal</string>
    <string name="name">Name</string>
    <string name="category_not_empty">Category is not empty.   You must delete the passwords first.</string>
	<string name="cannot_decrypt_category">Cannot decrypt category</string>
	<string name="cannot_decrypt_password">Cannot decrypt password</string>
	<string name="error_export">Error exporting database</string>
	<string name="export_database">Export Database</string>
	<string name="export_file_select">Select a file for export</string>
	<string name="export_msg">This will export the password database to a plaintext file.  THIS IS VERY DANGEROUS.  Make sure that you delete the file after you are done with it.   Are you sure you want to export?</string>
	<string name="export_success">Export to \'%s\' successful.   Warning!   The file is not encrypted.</string>
	<string name="export_file_error">Unable to create export file \'oisafe.csv\' on SDCARD.  You might try disconnecting USB from computer.</string>
	<string name="import_database">Import Database</string>
	<string name="import_file_select">Select a file for import</string>
	<string name="import_file_missing">Import file is missing:</string>
	<string name="import_file_error">Unable to import file \'oisafe.csv\' from SDCARD.  You might try disconnecting USB from computer.</string>
	<string name="import_error_first_line">First line is missing fields.</string>
	<string name="dialog_import_title">Import</string>
	<string name="dialog_import_msg">Do you want to replace the database (import from %s)?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="import_progress">Please wait while importing...</string>
	<string name="import_no_categories">No categories found.</string>
	<string name="import_no_entries">No entries found in CSV.</string>
	<string name="import_too_many_categories">Too many categories.</string>
	<string name="import_not_enough_fields">Not enough fields</string>
	<string name="import_blank_category">Blank category</string>
	<string name="import_blank_description">Blank description</string>
	<string name="dialog_delete_database_title">Delete Database</string>
	<string name="dialog_delete_database_msg">Are you really sure you want to delete the database?  This cannot be undone.</string>
	<string name="added">Added</string>
	<string name="entries">entries</string>
	<string name="import_complete">Import complete</string>
	<string name="import_delete_csv">Since it is not secure to keep passwords in clear text CSV files, would you like to delete</string>
	<string name="edit_entry">Edit Entry</string>
	<string name="view_entry">View Entry</string>
	<string name="help">Help</string>
	<string name="close">Close</string>
	<string name="go">Go</string>
	<string name="dialog_delete_password_title">Delete Password</string>
	<string name="dialog_delete_password_msg">Are you sure you want to delete this password?</string>
	<string name="change_password">Change Master Password</string>
	<string name="chg_pass_explaination">Use this to change the password you use to unlock OI Safe.   Your data will be re-encrypted with the new password.  The more complex your password is, the safer your data will be.</string>
	<string name="old_password">Old password</string>
	<string name="new_password">New password</string>
	<string name="verify_password">Verify password</string>
	<string name="new_verify_mismatch">New and Verify passwords do not match.</string>
    <string name="invalid_old_password">Old password is invalid.  Please try again.</string>
    <string name="error_changing_password">Error changing password</string>
    <string name="password_changed">Master Password changed</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_pass_fail">Password entries do not match.</string>
    <string name="backup">Backup</string>
    <string name="backup_progress">Backing up to </string>
    <string name="backup_complete">Complete.  Passwords backed up: </string>
    <string name="backup_failed">Backup failed: </string>
	<string name="backup_select_file">Select a file for backup</string>
	<string name="backup_error">Error while backing up</string>
    <string name="restore">Restore</string>
    <string name="filename">Filename</string>
    <string name="restore_no_file">Backup file not found.  You need to perform a backup first to create it.  Or copy a backup from your PC.</string>
    <string name="restore_set_password">Please provide the password used by the backup file.  Your master password will be set to this.</string>
	<string name="restore_select_file">Select a file for restore</string>
    <string name="restore_error">Restore error.</string>
    <string name="restore_unable_to_open">Unable to open file: %s</string>
    <string name="restore_bad_version">Version not supported: %s</string>
    <string name="restore_decrypt_error">Bad password.</string>
    <string name="dialog_restore_database_title">Restore Database</string>
    <string name="dialog_restore_database_msg">Are you sure you want to replace the current data?</string>
    <string name="restore_found">Found %1$s passwords from backup dated %2$s.</string>
    <string name="restore_complete">Complete.  Passwords restored: %s</string>
    <string name="copied_to_clipboard">copied to Clipboard</string>
    <string name="invalid_website">Invalid website</string>
    <string name="database_error_title">Database Error</string>
    <string name="database_error_msg">Database error.  Out of space?</string>
    <string name="open">Open</string>
    <string name="database_version_error_title">Database Version Error</string>
    <string name="database_version_error_msg">Sorry, but the version of the database is not supported.   You must install the version associated with this database.</string>
	<string name="move">Move</string>
	<string name="move_select">Select Category</string>
	<string name="moved_to">Moved to %s</string>
	<string name="preferences">Settings</string>
	<string name="pref_title_external_access">Allow external access</string>
	<string name="pref_summary_external_access">Allow other applications to secure your data with OI Safe</string>
	<string name="dialog_title_external_access">OI Safe: Another application requests access.</string>
	<string name="dialog_summary_external_access">Allow other applications to secure your data with OI Safe.</string>
	<string name="dialog_comment_external_access">This can also be set in OI Safe\'s Menu / Settings.</string>
	<string name="pref_title_lock_timeout">Auto lock timeout</string>
	<string name="pref_summary_lock_timeout">Number of minutes before timeout occurs and safe is locked</string>
	<string name="pref_dialog_title_lock_timeout">Auto lock timeout</string>
	<string name="pref_title_lock_on_screen_lock">Lock on screen lock</string>
	<string name="pref_summary_lock_on_screen_lock">Lock when the screen locks</string>
	<string name="pref_title_keypad">Keypad</string>
	<string name="pref_summary_keypad">Use a keypad to enter Master Password</string>
	<string name="pref_title_keypad_mute">Keypad Mute</string>
	<string name="pref_summary_keypad_mute">Mute keypad sounds</string>
	<string name="pref_title_autobackup">Auto backup</string>
	<string name="pref_summary_autobackup">Automatically prompt to backup passwords</string>
	<string name="pref_title_autobackup_days">Auto backup days</string>
	<string name="pref_summary_autobackup_days">Number of days to wait before next auto backup</string>
	<string name="pref_dialog_title_autobackup_days">Auto Backup Days</string>
	<string name="pref_title_backup_path">Default backup path</string>
	<string name="pref_title_export_path">Default export path</string>
	<string name="intent_decrypt">Decrypt (OI Safe)</string>
	<string name="intent_encrypt">Encrypt (OI Safe)</string>
	<string name="intent_get_password">Get password (OI Safe)</string>
	<string name="intent_set_password">Set password (OI Safe)</string>
	<string name="intent_restart_timer">Restart timer (OI Safe)</string>
	<string name="open_safe">Open OI Safe</string>
	<string name="lock">Lock</string>
	<string name="continue_text">Continue</string>
	<string name="generate_password">Generate Password</string>
	<string name="pass_gen_length">Password Length</string>
	<string name="pass_gen_uppercase">Uppercase [A-Z]</string>
	<string name="pass_gen_lowercase">Lowercase [a-z]</string>
	<string name="pass_gen_numbers">Numbers [0-9]</string>
	<string name="pass_gen_symbols">Symbols [!@#$%^\*]</string>
	<string name="pass_gen_copy_to_current_entry">Copy to Current Entry</string>
	<string name="pass_gen_copy_to_clipboard">Copy to Clipboard</string>
	<string name="cancel">Cancel</string>
	<string name="discard_changes">Discard changes</string>
	<string name="entry_saved">Entry saved</string>
	<string name="entry_save_error">Unable to save due to database error</string>
	<string name="last_edited">Last edited</string>
	<string name="last_edited_unknown">unknown</string>
	<string name="crypto_error">Crypto error:</string>
	<string name="uniquename">Unique name</string>
	<string name="package_access">Package access</string>
	<string name="not_found">not found</string>
	<string name="dialog_title_first_time_warning">New master key</string>
	<string name="dialog_summary_first_time_warning">A new random master key has been created. Use menu > backup and store this key in a safe place. Without this key you may lose encrypted data.</string>
	<string name="switch_mode">Switch mode</string>
	<string name="decrypt_progress">Decrypting...</string>
	<string name="search">Search</string>
	<string name="search_progress">Searching...</string>
	<string name="search_hint">Type search criteria</string>
	<string name="search_nothing_found">Nothing found</string>
	<string name="mute">Mute</string>
	<string name="sounds">Sounds</string>
	<string name="lock_timeout">Time to autolock: %s </string>
	<string name="backup_file_found">A backup file was found. Would you like to restore it?</string>
</resources>