<?xml version="1.0" encoding="UTF-8"?>
<!-- 
* $Id$
* 
* Copyright 2009 Randy McEoin
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
*      http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*
-->

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/preferences">
            
        <CheckBoxPreference
                android:title="@string/pref_title_external_access"
                android:summary="@string/pref_summary_external_access"
                android:key="external_access"
            	android:defaultValue="false"/>
                
        <ListPreference
                android:key="lock_timeout"
                android:title="@string/pref_title_lock_timeout"
                android:summary="@string/pref_summary_lock_timeout"
                android:entries="@array/pref_entries_lock_timeout"
                android:entryValues="@array/pref_entryvalues_lock_timeout"
                android:dialogTitle="@string/pref_dialog_title_lock_timeout"
            	android:defaultValue="5" />    
		<CheckBoxPreference
			android:title="@string/pref_title_lock_on_screen_lock"
			android:summary="@string/pref_summary_lock_on_screen_lock"
			android:key="lock_on_screen_lock"
			android:defaultValue="true"/>
		<CheckBoxPreference
			android:title="@string/pref_title_keypad"
			android:summary="@string/pref_summary_keypad"
			android:key="keypad"
			android:defaultValue="false"/>
		<CheckBoxPreference
			android:title="@string/pref_title_keypad_mute"
			android:summary="@string/pref_summary_keypad_mute"
			android:key="keypad_mute"
			android:defaultValue="false"
			android:dependency="keypad"/>
		<CheckBoxPreference
			android:title="@string/pref_title_autobackup"
			android:summary="@string/pref_summary_autobackup"
			android:key="autobackup"
			android:defaultValue="true"/>
        <ListPreference
			android:key="autobackup_days"
			android:title="@string/pref_title_autobackup_days"
			android:summary="@string/pref_summary_autobackup_days"
			android:entries="@array/pref_entries_autobackup_days"
			android:entryValues="@array/pref_entryvalues_autobackup_days"
			android:dialogTitle="@string/pref_dialog_title_autobackup_days"
			android:defaultValue="7"
			android:dependency="autobackup"/>
		<Preference
			android:title="@string/pref_title_backup_path"
			android:key="backup_path"/>
		<Preference
			android:title="@string/pref_title_export_path"
			android:key="export_path"/>    

    </PreferenceCategory>
</PreferenceScreen>