<?xml version="1.0" encoding="utf-8"?>
<!-- 
* $Id$
* 
* Copyright 2007 Steven Osborn
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
*      http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    
<LinearLayout 
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
	<TableLayout android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
			<TableRow>
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/pass_gen_length" />
				<EditText android:id="@+id/pass_length"
				 	android:singleLine="true"
					android:layout_width="3pt"
					android:layout_height="wrap_content" 
					android:layout_weight="0"
					android:text="8"/>
			</TableRow>
			<TableRow>
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
					android:text="@string/pass_gen_uppercase" />
				<CheckBox
					android:id="@+id/pass_upper"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content" android:enabled="true" android:checked="false"/>
			</TableRow>
			<TableRow>
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
					android:text="@string/pass_gen_lowercase" />
				<CheckBox android:id="@+id/pass_lower" 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:checked="true"/>
			</TableRow>
			
			<TableRow>
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
					android:text="@string/pass_gen_numbers" />
				<CheckBox android:id="@+id/pass_num" 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:checked="true"/>
			</TableRow>
			
			<TableRow>
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
					android:text="@string/pass_gen_symbols" />
				<CheckBox android:id="@+id/pass_symbol" 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
			</TableRow>
	</TableLayout>
	
	<EditText android:layout_width="fill_parent"
		android:id="@+id/pass_view"
		android:layout_height="wrap_content"
		android:singleLine="true"
		android:editable="false"/>
		
	<Button android:id="@+id/copy_entry" 
	  	android:text="@string/pass_gen_copy_to_current_entry"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
		
	<Button android:id="@+id/copy_clip" 
	  	android:text="@string/pass_gen_copy_to_clipboard"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
		
	<Button android:id="@+id/cancel" 
	  	android:text="@string/cancel"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />

</LinearLayout>
</ScrollView>