<?xml version="1.0" encoding="utf-8"?>
<!-- 
* $Id$
* 
* Copyright 2007-2008 Steven Osborn
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
*      http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:scrollbars="vertical">

<LinearLayout
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="wrap_content">

	<TextView android:id="@+id/entry_header"
		android:paddingBottom="10dp"
		android:paddingTop="10dp"
		android:textSize="24dp" 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:gravity="center"
		android:drawableLeft="@drawable/ic_launcher_safe" />

	<TextView android:id="@+id/first_time"
		android:text="@string/first_time" 
		android:paddingBottom="10dp"
		android:visibility="gone" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />	
	<TextView android:id="@+id/remote"
		android:text="@string/remote_ask" 
		android:paddingBottom="10dp"
		android:visibility="gone" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />

	<EditText android:id="@+id/password" 
		android:inputType="textPassword"
		android:hint="@string/master_password"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />

	<EditText android:id="@+id/pass_confirm"
		android:visibility="gone" 
		android:inputType="textPassword"
		android:hint="@string/confirm"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />

	<Button android:id="@+id/continue_button" 
		android:text="@string/continue_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />	
	<Button android:id="@+id/restore_button" 
		android:visibility="gone" 
		android:text="@string/restore"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />	
</LinearLayout>
</ScrollView>
