<?xml version="1.0" encoding="utf-8"?>
<!-- 
* $Id$
* 
* Copyright 2009 Isaac Potoczny-Jones
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
*      http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
	<TextView android:id="@+id/logoff_header"
		android:paddingBottom="10dp"
		android:paddingTop="10dp"
		android:textSize="20dp" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:drawableLeft="@drawable/passicon"
		android:text="@string/app_name"
	/>

	<TextView android:id="@+id/logoff_explanation"
		android:text="@string/logoff_explanation" 
		android:paddingBottom="10dp"
		android:layout_width="fill_parent"
		android:layout_below="@id/logoff_header"
		android:layout_height="wrap_content" />


	<LinearLayout android:id="@+id/linearLayout1" 
		android:layout_below="@id/logoff_explanation" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:orientation="horizontal">
		<Button android:id="@+id/logoff_button" 
			android:text="@string/lock"
			android:layout_width="0dip"
			android:layout_weight="1"
			android:layout_height="wrap_content" />

		<Button android:id="@+id/goto_pws" 
			android:text="@string/open_safe"
			android:layout_width="0dip"
			android:layout_weight="1"
			android:layout_height="wrap_content" />	
	</LinearLayout>


	<TextView android:id="@+id/lock_timeout"
		android:text="@string/lock_timeout"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:layout_alignParentLeft="true" 
		android:layout_below="@+id/linearLayout1" 
		android:paddingBottom="10dp" />

</RelativeLayout>	