<?xml version="1.0" encoding="utf-8"?>
<!-- 
* $Id$
* 
* Copyright 2008 Randy McEoin
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
*      http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:scrollbars="vertical">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<TextView android:id="@+id/explaination"
		android:text="@string/chg_pass_explaination" 
		android:paddingBottom="10px"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />

	<TextView android:id="@+id/old_password_label"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/old_password" />
	<EditText android:id="@+id/old_password"
		android:hint="@string/old_password" 
		android:password="true"
		android:autoText="false"
		android:singleLine="true"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />

	<TextView android:id="@+id/new_password_label"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/new_password" />
	<EditText android:id="@+id/new_password"
		android:hint="@string/new_password" 
		android:password="true"
		android:autoText="false"
		android:singleLine="true"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />

	<TextView android:id="@+id/verify_password_label"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/verify_password" />
	<EditText android:id="@+id/verify_password"
		android:hint="@string/verify_password" 
		android:password="true"
		android:autoText="false"
		android:singleLine="true"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />

	<Button android:id="@+id/change_password_button" 
		android:text="@string/change_password"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />

</LinearLayout>

</ScrollView>
