<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="5dp" >

	<!-- Copied from front_door.xml -->
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="15dip"
		android:orientation="horizontal" >

		<ImageView
			android:id="@+id/entry_icon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/app_name" />

		<TextView
			android:id="@+id/entry_header"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingBottom="10dp"
			android:paddingTop="10dp"
			android:textSize="24dp" />
	</LinearLayout>

	<!-- /copied from front_door.xml -->

	<TextView
		android:id="@+id/textView1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/backup_file_found"
		android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
		android:layout_marginBottom="5dp"
		android:layout_marginTop="5dp"
		android:id="@+id/filename"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text=""
		android:textAppearance="?android:attr/textAppearanceMedium" />

	<RelativeLayout
		android:id="@+id/relativeLayout1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >

		<Button
			android:id="@+id/restore"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentTop="true"
			android:text="@string/restore" />

		<Button
			android:id="@+id/cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:layout_alignParentTop="true"
			android:text="@string/cancel" />

	</RelativeLayout>

</LinearLayout>