<?xml version="1.0" encoding="utf-8"?>
<!-- 
* $Id$
* 
* Copyright 2008 Steven Osborn and Randy McEoin
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
*      http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
	<TextView android:id="@+id/restore_filename_lbl"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/filename" />
	<TextView android:id="@+id/restore_filename"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>

	<TextView android:id="@+id/restore_info"
		android:paddingTop="10sp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>

	<EditText android:id="@+id/restore_password"
		android:visibility="invisible" 
		android:password="true"
		android:hint="@string/master_password"
		android:autoText="false"
		android:singleLine="true"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />

	<Button android:id="@+id/restore_button" 
		android:visibility="invisible" 
		android:text="@string/restore"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />	

</LinearLayout>	